<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_item_reviewing"
            android:id="@+id/dialog_reviewingItem"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_itemName"
            android:text="@string/dialog_item_name"
            android:layout_toEndOf="@id/dialog_reviewingItem"
            android:layout_marginStart="10dp"
            />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_userName"
        android:hint="@string/dialog_userNameHint"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_reviewBody"
        android:lines="5"
        android:hint="@string/dialog_reviewBody"
        android:gravity="start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_warning"
        android:text="@string/dialog_warning"
        android:textColor="#F40A0A"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_btn"
        android:text="@string/dialog_btn"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

</LinearLayout>