<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cart_card_itemName"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:text="@string/cart_card_item_name"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cart_card_delete"
            android:text="@string/cart_card_delete"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@color/design_default_color_primary"
            android:padding="3dp"
            android:textColor="#FFF"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cart_card_price"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_toStartOf="@id/cart_card_delete"
            android:layout_marginEnd="25dp"
            android:text="@string/cart_card_price"
            />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>