<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search"
    >


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_toolbar"
        android:background="@color/design_default_color_primary_variant" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_searchBox"
            android:hint="@string/search_hint"
            android:layout_margin="10dp"
            android:layout_toStartOf="@+id/serach_icon"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/serach_icon"
            android:src="@drawable/ic_searchicon"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/search_searchBox"
            android:layout_marginTop="10dp"
            android:id="@+id/serach_linearLayoutId">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serach_category1"
                android:text="@string/serach_catergory1"
                android:layout_marginStart="10dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serach_category2"
                android:text="@string/serach_catergory2"
                android:layout_marginStart="10dp"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serach_category3"
                android:text="@string/serach_catergory3"
                android:layout_marginStart="10dp"
                android:visibility="gone"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serach_seeAllCategories"
            android:text="@string/serach_allCategories"
            android:textColor="@color/design_default_color_primary_variant"
            android:layout_below="@id/serach_linearLayoutId"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/serach_seeAllCategories"
            android:layout_centerHorizontal="true"
            android:id="@+id/search_recycleView"
            />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"
        android:id="@+id/search_bottomNav"/>

</RelativeLayout>