<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_new_item"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/new_item"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_new_item_recycler_view"
                android:layout_below="@+id/fragment_new_item"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_popular_items"
                android:text="@string/popular_items"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@id/fragment_new_item_recycler_view"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_popular_items_recycler_view"
                android:layout_below="@id/fragment_popular_items"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_suggested_items"
                android:text="@string/suggested_items"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/fragment_popular_items_recycler_view"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_suggested_items_recycler_view"
                android:layout_below="@id/fragment_suggested_items"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        app:menu="@menu/bottom_nav_menu"
        android:layout_alignParentBottom="true"
        android:elevation="5dp"/>



</RelativeLayout>